--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ contourpy==1.0.7
 exceptiongroup==1.1.0
 Flask==2.2.2
 greenlet==2.0.2
+gunicorn==20.1.0
 h11==0.14.0
 idna==3.4
 importlib-metadata==6.0.0
