--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ async-timeout==4.0.2
 attrs==22.2.0
 beautifulsoup4==4.11.1
 bokeh==3.0.3
+boto==2.49.0
 certifi==2022.12.7
 charset-normalizer==3.0.1
 click==8.1.3
